# Anchor-Notes

./: .gitignore  Cargo.toml  DATA_STRUCTURE.md  README.md  TECH_STACK.md
anchor_ui/: Cargo.toml  patch.py  patch_html.py  patch_scroll.py  patch_stream.py  tauri.conf.json
anchor_ui/frontend/: index.html
anchor_ui/src/: bin_test.rs  main.rs  main.rs.bak
renderer_app/: Cargo.toml
renderer_app/src/: main.rs
