[package]
name = "anchor_ui"
version = "1.20.3"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tar = "0.4"
flate2 = "1.0"
base64 = "0.22"
jieba-rs = "0.7"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1.8.2"
percent-encoding = "2.3.2"
window-vibrancy = "0.4.3"
lofty = "0.24.0"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.19"
windows = { version = "0.39", features = ["Win32_System_WinRT"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
