[package]
name = "renderer_app"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
env_logger = "0.11.10"
glyphon = "0.11.0"
itertools = "0.14.0"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"

cpal = "0.15"
rustfft = "6.1"

rand = "0.8"
arboard = "3.6.1"
